--- a/src/index.html
+++ b/src/index.html
@@ -299,42 +299,7 @@
             </div>
         </div>
     </section>
-    <section class="how-work">
-        <div class="content">
-            <div class="how-work-content">
-                <h2>Как это устроено</h2>
-                <div class="how-work-box">
-                    <div class="box-text">
-                        <p><span>1</span></p>
-                        <h4>Заполните простую анкету</h4>
-                        <h5>Расскажите, что вас беспокоит и что важно в психологе.</h5>
-                    </div>
-                    <div class="box-text">
-                        <p><span>2</span></p>
-                        <h4>Выберите психолога</h4>
-                        <h5>Выберите понравившегося психолога </h5>
-                    </div>
-                    <div class="box-img">
-                        <img src="./img/Mobile.svg" alt="Mobile" width="270px" height="540px">
-                    </div>
-                    <div class="box-text">
-                        <p><span>3</span></p>
-                        <h4>Выберите способ связи с психологом</h4>
-                        <h5>49руб/мин по аудио/видео связи 200руб за 24 часа чата + аудио сообщения</h5>
-                    </div>
-                    <div class="box-text">
-                        <p><span>4</span></p>
-                        <h4>Начните общение</h4>
-                        <h5>Все общение происходит через платформу SPEAK. Вслучае если психолог вам не понравится, вы можете заменить его без дополнительных переплат</h5>
-                    </div>
-                </div>
-                <button>
-                    <p>Начать общение</p>
-                </button>
-            </div>
-        </div>
 
-    </section>
     <section class="reviews">
         <div class="content">
             <div class="reviews-content">
@@ -408,25 +373,40 @@
                         <h5>Каждый родитель хочет, чтобы его ребенок рос сильной уравновешенной личностью. Мы понимаем, что именно в детстве формируются зачатки характера. Как справиться с возникающими проблемами, как выстроить отношения с ребенком, чтобы он доверял вам? На эти и другие вопросы поможет ответить детский психолог онлайн.</h5>
                     </div>
                     <div class="seo-text">
-                        <h4>Детский психолог онлайн</h4>
-                        <h5>Каждый родитель хочет, чтобы его ребенок рос сильной уравновешенной личностью. Мы понимаем, что именно в детстве формируются зачатки характера. Как справиться с возникающими проблемами, как выстроить отношения с ребенком, чтобы он доверял вам? На эти и другие вопросы поможет ответить детский психолог онлайн.</h5>
+                        <h4>Преимущества онлайн-консультации детского психолога</h4>
+                        <h5>Главный плюс сеанса в таком формате – экономия времени. Вам не придется тратить время на дорогу и долгие сборы. Все, что нужно – компьютер или смартфон, микрофон и блокнот с ручкой, чтобы записывать важную информацию. Если вам или ребенку тяжело общаться с незнакомым человеком лично, онлайн-связь в этом случае упростит дело. </h5>
                     </div>
                     <div class="seo-text">
-                        <h4>Детский психолог онлайн</h4>
-                        <h5>Каждый родитель хочет, чтобы его ребенок рос сильной уравновешенной личностью. Мы понимаем, что именно в детстве формируются зачатки характера. Как справиться с возникающими проблемами, как выстроить отношения с ребенком, чтобы он доверял вам? На эти и другие вопросы поможет ответить детский психолог онлайн.</h5>
+                        <h4>Когда нужна помощь детского психолога онлайн?</h4>
+                        <h5>Онлайн-консультация детского психолога может быть полезна, если у вас есть вопросы по таким темам, как:</h5>
+                        <ul>
+                            <li>Плохая успеваемость;</li>
+                            <li>Стеснительность;</li>
+                            <li>Цифровая зависимость;</li>
+                            <li>Агрессия;</li>
+                            <li>Потеря близкого в семье;</li>
+                            <li>Возрастной кризис;</li>
+                            <li>Подготовка к детскому саду или школе;</li>
+                            <li>Профориентация.</li>
+                        </ul>
+                        <h5>Это лишь часть тем, которые можно затронуть. Помните, что, если возникает ситуация, в которой вы самостоятельно не можете разобраться, сейчас консультация детского психолога онлайн поможет найти ответы.</h5>
                     </div>
                     <div class="seo-text">
-                        <h4>Детский психолог онлайн</h4>
-                        <h5>Каждый родитель хочет, чтобы его ребенок рос сильной уравновешенной личностью. Мы понимаем, что именно в детстве формируются зачатки характера. Как справиться с возникающими проблемами, как выстроить отношения с ребенком, чтобы он доверял вам? На эти и другие вопросы поможет ответить детский психолог онлайн.</h5>
+                        <h4>Как проходит онлайн-консультация детского психолога?</h4>
+                        <h5>Задать вопрос детскому психологу онлайн может как сам ребенок, так и родитель. 
+                            На первом сеансе обычно присутствует родитель или опекун, а также сам «виновник торжества». Следующие сеансы могут быть и без взрослого, если ребенок сам в состоянии связаться через интернет.
+Бывает и так, что сначала ребенку присутствовать необязательно. В этом случае работа происходит с родителем, а если есть необходимость, позже присоединяется ребенок.
+Психолог по детским вопросам онлайн может попросить ребенка нарисовать что-то, далее по этим рисункам он проведет диагностику. Родитель тоже является звеном связи с психикой ребенка. Через него психолог может сделать вывод о том, какая проблема сейчас назрела.
+Если специалист попросит вас пройти обследование или сдать анализы для более ясной картины, не пугайтесь, это нормально. Таким образом, вы оба сможете исключить какие-либо диагнозы
+                        </h5>
                     </div>
                     <div class="seo-text">
-                        <h4>Детский психолог онлайн</h4>
-                        <h5>Каждый родитель хочет, чтобы его ребенок рос сильной уравновешенной личностью. Мы понимаем, что именно в детстве формируются зачатки характера. Как справиться с возникающими проблемами, как выстроить отношения с ребенком, чтобы он доверял вам? На эти и другие вопросы поможет ответить детский психолог онлайн.</h5>
+                        <h4>О чем поговорить с детским психологом?</h4>
+                        <h5>Родители малышей часто обращаются с вопросами об адаптации в детском саду. Есть тревожные мамы, которые сомневаются, стоит ли отдавать малыша в сад или же пока слишком рано. Очень многих волнует, что воспитатель будет срываться на ребенка. Это логично, ведь в силу того, что в СМИ регулярно появляются жуткие новости о чудовищных ЧП в детсадах, беспокойство обосновано. 
+                            Отдельный вопрос подготовки к саду. В интернете полно информации в таком ключе: «ребенок должен научиться самостоятельно есть, ходить в туалет и засыпать сам перед тем, как идти в сад». Особо мнительные беспрекословно верят, другие понимают: ребенок ничего никому не должен. Его невозможно научить чему-то, пока он сам не захочет делать это. «Дрессировке» малыши не поддаются. Но пугаться не стоит, в любом случае, воспитатели будут помогать малышам в этих вопросах. Главное – настроиться на позитив и верить в хорошее.
+                            Дети постарше сталкиваются с проблемами переходного возраста, неуверенностью в себе, безответной любовью и другими. Если вы понимаете, что вам с чадом необходима онлайн-консультация, вы можете выбрать специалиста на нашем сайте.</h5>
                     </div>
-                    <div class="seo-text">
-                        <h4>Детский психолог онлайн</h4>
-                        <h5>Каждый родитель хочет, чтобы его ребенок рос сильной уравновешенной личностью. Мы понимаем, что именно в детстве формируются зачатки характера. Как справиться с возникающими проблемами, как выстроить отношения с ребенком, чтобы он доверял вам? На эти и другие вопросы поможет ответить детский психолог онлайн.</h5>
-                    </div>
+                  
                 </div>
             </div>
         </div>
@@ -434,36 +414,43 @@
     <footer class="footer">
         <div class="content">
             <div class="footer-content">
-                <img src="./img/logo.svg" alt="logo">
-                <div class="menu">
-                    <nav>
-                        <ul>
-                            <li><a href="#">About us</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">About us</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
-                    </nav>
+                <div class="menu-content">
+                    <img src="./img/logo.svg" alt="logo">
+                    <div class="menu">
+                        <nav>
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Blog</a></li>
+                                <li><a href="#">Privacy Policy</a></li>
+                                <li><a href="#">About us</a></li>
+                                <li><a href="#">Contact</a></li>
+                                <li><a href="#">Terms and Conditions</a></li>
+                            </ul>
+                        </nav>
+
+                    </div>
 
                 </div>
-                <div class="socials">
-                    <img src="./img/facebook.svg" alt="facebook">
-                    <img src="./img/instagram.svg" alt="instagram">
-                    <img src="./img/linkedin.svg" alt="linkedin">
-                    <img src="./img/twitter.svg" alt="twitter">
-                </div>
-                <div class="contacts-box">
-                    <div class="contact">
-                        <img src="./img/mail.svg" alt="mail">
-                        <p>info@speak.help</p>
+                <div class="socials-content">
+                    <div class="socials">
+                        <img src="./img/facebook.svg" alt="facebook" width="40px" height="40px">
+                        <img src="./img/instagram.svg" alt="instagram" width="40px" height="40px">
+                        <img src="./img/linkedin.svg" alt="linkedin" width="40px" height="40px">
+                        <img src="./img/twitter.svg" alt="twitter" width="40px" height="40px">
                     </div>
-                    <div class="contact">
-                        <img src="./img/pin.svg" alt="pint">
-                        <p>33 W 60th Street, 8th FI New York, NY 10023</p>
+                    <div class="contacts-box">
+                        <div class="contact">
+                            <img src="./img/mail.svg" alt="mail">
+                            <p>info@speak.help</p>
+                        </div>
+                        <div class="contact">
+                            <img src="./img/pin.svg" alt="pint">
+                            <p>33 W 60th Street, 8th FI New York, NY 10023</p>
+                        </div>
                     </div>
-                </div>
+
+                </div> 
+               
             </div>
         </div>
     </footer>
